<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/TextTitle"
        android:text="@string/Tools"/>
    <EditText
        android:id="@+id/et_queryphone"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="11"
        android:hint="查询手机归属地"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_query"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Query"/>
        <TextView
            android:id="@+id/tv_query_phone_address"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e3f5f0"
            android:text="@string/None"/>
    </LinearLayout>

</LinearLayout>