<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/TextTitle"
        android:text="@string/Set_PassWord"
        android:background="#12c1fb"/>
    <EditText
        android:inputType="textPassword"
        android:maxLength="15"
        android:id="@+id/et_set_psw"
        android:hint="@string/Set_PassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:maxLength="15"
        android:inputType="textPassword"
        android:id="@+id/et_confirm_psd"
        android:hint="确认密码"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_submit"
            android:text="@string/Submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_cancel"
            android:text="@string/Cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>